# emergency-qa-lab

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/emergency_qa_lab/emergency_service/: main.py  models.py  sample.py  storage.py
src/emergency_qa_lab/emergency_service/web/: index.html
tests/: conftest.py
tests/api/: test_alerts_api.py  test_smple.py
tests/e2e/: test_alerts_ui.py
tests/utils/: wait_for_service.py
