[tool.poetry]
name = "emergency-qa-lab"
version = "0.1.0"
description = ""
authors = ["Wei Liu <dljsonliu1205@gmail.com>"]
packages = [{ include = "emergency_qa_lab", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
requests = "^2.32.5"
pytest-html = "^4.2.0"
ruff = "^0.15.4"
playwright = "^1.58.0"
behave = "^1.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"